--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,9 @@ img {
 
 .header {
   border: 1px solid #E7E9FC;
+  box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container{
@@ -134,6 +137,9 @@ display: flex;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.link-studio {
+  color:#404bbf;
+}
 .link-studio::after {
   content:'';
   width: 100%;
@@ -194,15 +200,18 @@ padding-top: 24px;
   background-color: #2e2f42 ;
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
   background-image: linear-gradient(
     rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)
    ), 
-  url(../images/hero_bg.png);
+  url(../images/hero_bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin: 0 auto;
 }
+
 
 .hero-title {
   font-weight: 700;
@@ -279,6 +288,7 @@ width: 264px;
 .icon-feature {
   display: flex;
   justify-content: center;
+  align-items: center;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   background: #f4f4fd;
@@ -374,8 +384,6 @@ column-gap: 24px;
 .portfolio-list-item {
   width: 360px;
 width: calc((100% - 48px) / 3);
-position: relative;
-  overflow: hidden;
 }
 
 .portfolio-list-title {
@@ -390,8 +398,14 @@ border: 1px solid #e7e9fc;
 border-top: none;
 }
 
+.overlay-portfolio {
+position: relative;
+  overflow: hidden;
+}
+
 .overlay {
-  padding: 40px 32px 164px;
+
+  padding: 40px 32px;
   background-color: #4D5AE5;
   color: #F4F4FD;
   position: absolute;
@@ -400,12 +414,15 @@ border-top: none;
   width: 100%;
   height: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover .overlay {
   transform: translateY(0);
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1p;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
   cursor: pointer;
 }
 /*------------------------------*/
@@ -418,10 +435,13 @@ padding-top: 100px;
   padding-bottom: 100px;
 }
 
-.footer-container {
-  display: inline-block;
-  flex-direction: column;
-  max-width: 264px;
+.footer-container{
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-container-logo {
+  margin-right: 120px;
 }
 
 
@@ -431,6 +451,7 @@ padding-top: 100px;
 }
 
 .footer-text {
+  max-width: 264px;
   color: #f4f4fd;
 }
 
@@ -445,23 +466,23 @@ padding-top: 100px;
 }
 
 .social-container {
-  display: inline-block;
-  flex-direction: column;
-  align-items: center;
-  max-width: 208px;
-  margin-left: 120px;
+ 
 }
 
 .footer-social-titel {
-  margin-bottom: 16px;
     font-weight: 500;
     color: #fff;
+    margin-bottom: 16px;
 }
 
 .footer-social-list {
   display: flex;
     flex-wrap: wrap;
   gap: 16px;
+}
+
+.footer-icon {
+  fill: #f4f4fd;
 }
 
 .footer-social-link {
