--- a/css/styles.css
+++ b/css/styles.css
@@ -348,9 +348,13 @@ margin-left: 16px;
 margin-right: 16px;
 }
 
+.feature-icon {
+  fill: #f4f4fd;
+}
+
 
 .team-social-link {
-display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   width: 40px;
@@ -362,7 +366,7 @@ display: flex;
 
 .team-social-link:hover,
 .team-social-link:focus {
-  background-color: #31D0AA;
+  background-color: #404bbf;;
 }
 
 /*------------------------------*/
@@ -379,6 +383,7 @@ display: flex;
 flex-wrap: wrap;
 row-gap: 48px;
 column-gap: 24px;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item {
@@ -414,10 +419,13 @@ position: relative;
   width: 100%;
   height: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.portfolio-list:hover{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16),
+      0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .portfolio-list-item:hover .overlay {
   transform: translateY(0);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
