--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,10 @@ img {
 
 }
 
+.icon {
+  fill: #f4f4fd;
+}
+
 
 /*---------------------HEADER-------------------*/
 
@@ -352,9 +356,14 @@ margin-right: 16px;
   fill: #f4f4fd;
 }
 
+.team-social-item {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .team-social-link {
-  display: flex;
+ display: flex;
   justify-content: center;
   align-items: center;
   width: 40px;
@@ -383,13 +392,23 @@ display: flex;
 flex-wrap: wrap;
 row-gap: 48px;
 column-gap: 24px;
-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 
 .portfolio-list-item {
   width: 360px;
 width: calc((100% - 48px) / 3);
+box-shadow: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio-list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 
 .portfolio-list-title {
 margin-bottom: 8px;
@@ -409,7 +428,6 @@ position: relative;
 }
 
 .overlay {
-
   padding: 40px 32px;
   background-color: #4D5AE5;
   color: #F4F4FD;
@@ -422,15 +440,9 @@ position: relative;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list:hover{
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-      0px 1px 1px rgba(46, 47, 66, 0.16),
-      0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-list-item:hover .overlay {
   transform: translateY(0);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
   cursor: pointer;
 }
 /*------------------------------*/
@@ -489,7 +501,7 @@ padding-top: 100px;
   gap: 16px;
 }
 
-.footer-icon {
+.icon {
   fill: #f4f4fd;
 }
 
